--- a/gb/1/1/21/n37759.md
+++ b/gb/1/1/21/n37759.md
@@ -7,61 +7,59 @@
 	<p>【大纪元1月21日讯】以“星空下的浪漫”音乐会征服无数乐迷的萨克斯风王子伍迪在羊城乐坛销声匿迹了半年之久后，近日返穗，着手为他新世纪第一个情人节的“爱的旋律”音乐会作准备。</p>
 <p>伍迪的父亲在安庆地方乐团以单簧管（又名黑管）闻名于当地。受他的影响，伍迪八岁时正式拿起了黑管。光阴荏苒，转瞬就是十几年，随着对音乐认识的加深和思维的拓展，伍迪越来越感到黑管用起来力不从心。它气域较窄，发声虽有富丽堂皇之感，却很难有萨克斯风的大度与宏丽，更不易表达人们向往的温罄、浪漫。如把两者结合起来，奏出来的乐声可谓珠联璧合。于是１９８８年伍迪又捧起了萨克斯风，并得到美国密执安大学著名萨克斯风演奏家ＪｏｈｎＡｎｅｌｅｒｇｏｎ及弗吉利亚大学Ｃｈａｎｌｓｗｅｓｔ教授的指导。１９９０年他又赴荷兰阿姆斯特丹音乐学院深造。经过数十个春秋的摸爬滚打，伍迪终于形成了自己的风格，回首往事，他感悟最深的就是──一个成功的音乐人，先天的东西是主要的，而纯技术的东西是次要的，如果没有音乐天赋，忙碌一生也是一事无成。</p>
 <p>伍迪说，２月１４日，他将在广州中山纪念堂拿出最新、最好的乐曲，为天下有情人送上一份节日厚礼。</p>
-<hr />
-<p><b><span style="color: red;">相关文章</span></b></p>
+<p><b><span style="color: red">相关文章</span></b></p>
 <ul>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=37500" target="_blank" rel="noopener noreferrer">音乐迷露营三天为ＤＯＭＡＩＮ交响乐会</a> (1/20/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=37496" target="_blank" rel="noopener noreferrer">就职日 布什忙得像只花蝴蝶</a> (1/20/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=37187" target="_blank" rel="noopener noreferrer">帕格尼尼与车夫 音乐会解放身心疲劳</a> (1/19/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=37064" target="_blank" rel="noopener noreferrer">那英告别百代进入华纳</a> (1/19/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=37058" target="_blank" rel="noopener noreferrer">吉恩?西蒙斯将揭露音乐圈的丑陋 </a> (1/19/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=37039" target="_blank" rel="noopener noreferrer">华语榜中榜明星强中强 </a> (1/19/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=37025" target="_blank" rel="noopener noreferrer">达达乐队&#8211;2000年乐坛最大的音乐发现</a> (1/19/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=37013" target="_blank" rel="noopener noreferrer">汪峰：一个摇滚贵族的自白 </a> (1/19/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=36985" target="_blank" rel="noopener noreferrer">台湾外交部长秘访泰国与澳洲</a> (1/19/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=36738" target="_blank" rel="noopener noreferrer">世界体育大奖颁奖晚会群星汇粹</a> (1/18/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=36638" target="_blank" rel="noopener noreferrer">学友争奖搞乱港台部署 传媒大奖起暗涌</a> (1/18/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=36330" target="_blank" rel="noopener noreferrer">菲戈暗示对英超有兴趣</a> (1/18/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=36319" target="_blank" rel="noopener noreferrer">新年节目　推出古典音乐会 </a> (1/18/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=36041" target="_blank" rel="noopener noreferrer">张学友、王菲勇夺杰出男女歌手大奖 </a> (1/17/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=35955" target="_blank" rel="noopener noreferrer">内地港台歌手首次大比赛</a> (1/17/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=35762" target="_blank" rel="noopener noreferrer">苹果新推出的音乐制作软件iTunes一周下载27.5万次</a> (1/17/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=35750" target="_blank" rel="noopener noreferrer">过新年: 换个手机铃声吉祥call </a> (1/17/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34962" target="_blank" rel="noopener noreferrer">综述：香港年度十大劲歌金曲奖揭晓</a> (1/15/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34720" target="_blank" rel="noopener noreferrer">马友友丝路之旅将在两岸首演谭盾的卧虎藏龙 </a> (1/15/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34537" target="_blank" rel="noopener noreferrer">孙燕姿：新人圈中最抢眼（图文）</a> (1/15/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=37500" target="_blank" rel="noopener noreferrer nofollow">音乐迷露营三天为ＤＯＭＡＩＮ交响乐会</a> (1/20/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=37496" target="_blank" rel="noopener noreferrer nofollow">就职日 布什忙得像只花蝴蝶</a> (1/20/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=37187" target="_blank" rel="noopener noreferrer nofollow">帕格尼尼与车夫 音乐会解放身心疲劳</a> (1/19/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=37064" target="_blank" rel="noopener noreferrer nofollow">那英告别百代进入华纳</a> (1/19/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=37058" target="_blank" rel="noopener noreferrer nofollow">吉恩?西蒙斯将揭露音乐圈的丑陋 </a> (1/19/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=37039" target="_blank" rel="noopener noreferrer nofollow">华语榜中榜明星强中强 </a> (1/19/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=37025" target="_blank" rel="noopener noreferrer nofollow">达达乐队&#8211;2000年乐坛最大的音乐发现</a> (1/19/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=37013" target="_blank" rel="noopener noreferrer nofollow">汪峰：一个摇滚贵族的自白 </a> (1/19/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=36985" target="_blank" rel="noopener noreferrer nofollow">台湾外交部长秘访泰国与澳洲</a> (1/19/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=36738" target="_blank" rel="noopener noreferrer nofollow">世界体育大奖颁奖晚会群星汇粹</a> (1/18/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=36638" target="_blank" rel="noopener noreferrer nofollow">学友争奖搞乱港台部署 传媒大奖起暗涌</a> (1/18/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=36330" target="_blank" rel="noopener noreferrer nofollow">菲戈暗示对英超有兴趣</a> (1/18/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=36319" target="_blank" rel="noopener noreferrer nofollow">新年节目　推出古典音乐会 </a> (1/18/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=36041" target="_blank" rel="noopener noreferrer nofollow">张学友、王菲勇夺杰出男女歌手大奖 </a> (1/17/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=35955" target="_blank" rel="noopener noreferrer nofollow">内地港台歌手首次大比赛</a> (1/17/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=35762" target="_blank" rel="noopener noreferrer nofollow">苹果新推出的音乐制作软件iTunes一周下载27.5万次</a> (1/17/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=35750" target="_blank" rel="noopener noreferrer nofollow">过新年: 换个手机铃声吉祥call </a> (1/17/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34962" target="_blank" rel="noopener noreferrer nofollow">综述：香港年度十大劲歌金曲奖揭晓</a> (1/15/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34720" target="_blank" rel="noopener noreferrer nofollow">马友友丝路之旅将在两岸首演谭盾的卧虎藏龙 </a> (1/15/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34537" target="_blank" rel="noopener noreferrer nofollow">孙燕姿：新人圈中最抢眼（图文）</a> (1/15/2001)</li>
 </ul>
-<p>&nbsp;</p>
-	
+<p>
+?</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/15/n34537.md#1">孙燕姿：新人圈中最抢眼（图文）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/15/n34720.md#1">马友友丝路之旅将在两岸首演谭盾的卧虎藏龙</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/15/n34962.md#1">综述：香港年度十大劲歌金曲奖揭晓</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/17/n35750.md#1">过年: 换个手机铃声吉祥call</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/7/n10698182.md#1" target="_blank">共产暴政录：中共在苏区杀人如麻</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/19/n11396317.md#1" target="_blank">国防论坛基金会总裁：法轮功在反迫害最前线</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/23/n11403580.md#1" target="_blank">共产暴政录：盛世才与国共两党的新疆分裂争夺战</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/5/n11633708.md#1" target="_blank">华东师范大学法轮功学员的20年</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14285873.md#1">【周末大V谈】社会的悲剧？还是个人的问题？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/14/n14180510.md#1">【古韵流芳】李商隐叹相思 以无题诗道心曲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284762.md#1">【新闻五人行】北京侵台“彩排”苦了这国！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285173.md#1">岳阳官方堵洞庭湖溃堤失败 “堵嘴”文件曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285003.md#1">洞庭湖决堤 洪水漫过房顶 村民连夜逃难</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284404.md#1">孙艺真：结婚生子后开启演员生涯第二篇章</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285219.md#1">只用微波炉 就能煮好玉米棒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286069.md#1">为何飞机从起点到终点的飞行路线非一直线？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/14/n14250364.md#1">你吃对东西了吗？专家揭七大防癌饮食</a></li>
-<hr>
-<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/1/1/21/n37759.htm">大陆羊城萨克斯风王子伍迪情人节“爱的旋律”的音乐会</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/1/1/21/n37759.htm">大陆羊城萨克斯风王子伍迪情人节“爱的旋律”的音乐会</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/1/1/21/n37759.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
